# ChangeLog for sys-apps/busybox
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.183 2008/04/19 22:31:25 vapier Exp $

*busybox-1.10.1 (19 Apr 2008)

  19 Apr 2008; Mike Frysinger <vapier@gentoo.org> +busybox-1.10.1.ebuild:
  Version bump #210270 by Sergey Dryabzhinsky.

*busybox-1.9.2 (19 Apr 2008)

  19 Apr 2008; Mike Frysinger <vapier@gentoo.org> +busybox-1.9.2.ebuild:
  Version bump.

*busybox-1.9.0 (06 Feb 2008)

  06 Feb 2008; Mike Frysinger <vapier@gentoo.org>
  +files/busybox-1.9.0-allno.patch, +files/busybox-1.9.0-fsck.patch,
  +files/busybox-1.9.0-iproute.patch, +files/busybox-1.9.0-mkswap.patch,
  +files/busybox-1.9.0-msh.patch, +files/busybox-1.9.0-nameif.patch,
  +files/busybox-1.9.0-nohup.patch, +files/busybox-1.9.0-stty.patch,
  +files/busybox-1.9.0-zcip.patch, +busybox-1.9.0.ebuild:
  Version bump.

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> busybox-1.8.2.ebuild:
  Stable on ppc64

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> busybox-1.8.2.ebuild:
  Stable for HPPA too.

  17 Jan 2008; Jeroen Roovers <jer@gentoo.org> busybox-1.8.2.ebuild:
  Apply 1.7.4 signal hack patch (bug #206456) to 1.8.2.

  17 Jan 2008; Richard Freeman <rich0@gentoo.org> busybox-1.8.2.ebuild:
  amd64 stable

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> busybox-1.8.2.ebuild:
  alpha/ia64/sparc/x86 stable

  04 Dec 2007; Markus Rothe <corsair@gentoo.org> busybox-1.7.4.ebuild:
  Stable on ppc64; bug #201036

  04 Dec 2007; nixnut <nixnut@gentoo.org> busybox-1.7.4.ebuild:
  Stable on ppc wrt bug 201036

  04 Dec 2007; Jeroen Roovers <jer@gentoo.org> busybox-1.7.4.ebuild:
  Stable for HPPA (bug #201036).

  04 Dec 2007; Raúl Porcel <armin76@gentoo.org> busybox-1.7.4.ebuild:
  alpha/ia64/sparc/x86 stable wrt #201036

  04 Dec 2007; Mike Frysinger <vapier@gentoo.org>
  +files/busybox-1.7.4-signal-hack.patch, busybox-1.7.4.ebuild: