@@ -20,7 +20,7 @@ AUX busybox-1.9.0-nameif.patch 1584 RMD160 f43b765438a0a3882e61ccaa7691329824d5a
 AUX busybox-1.9.0-nohup.patch 2281 RMD160 1683ac268a03ac78ac73cda2d6d5f000a8f0c823 SHA1 a5bf092b5cc8760412af3d7dc72c3564172a1a08 SHA256 f939ac7fdfea294db7b82378eccd5e26a955913dde2bb6df926a41f4c442f7de
 AUX busybox-1.9.0-stty.patch 806 RMD160 e7d04f3f1590b233f63d027bb27b278307d86aa6 SHA1 a2e93dfe87ccb5b00fd714e57af09ba1e83ee4e3 SHA256 d02827ad1e6d72d0d78f40cc77f805fc8e51718786e8571686ba05b7016056ce
 AUX busybox-1.9.0-zcip.patch 2195 RMD160 7c056cb9bff14e1e5f728d2f7da93f46676cf7ba SHA1 ea89a0e9cd753a928c503b1d8c2e089b75992998 SHA256 c8d639ca5a6fc5198a5a532d4fa3dbb5350ee14cebf5ce6becbaead7755f3b47
-AUX mdev-start.sh 2411 RMD160 0513dc2423a62d2728cd04ef01172906a79f4d01 SHA1 52efb662fc0726c18da0964adf1d80571766ce01 SHA256 33f45f6f09ee28f623b4cc0dcc1e60743141d9a969c04b9566ac3d0687cb670a
+AUX mdev-start.sh 2752 RMD160 a59ed7a476f01fa8286b975fd295d748a5fa4b97 SHA1 7dba824a8420a6f64d8294cf44bc194cc4ff18ed SHA256 0fc5194277c5862e92f32743fa84f866a0981aeee5926eb1c61987edeedbafe6
 DIST busybox-1.10.1.tar.bz2 1859037 RMD160 19f7f31e0b358a2e7da2548cc872ad642fe2e545 SHA1 a923d28770b3b153514b57ffa11cf8f95ca99e50 SHA256 a0372c5b457f556cd34a8c7e323a82a30610df72d65732e098c229146f8a21a2
 DIST busybox-1.7.4.tar.bz2 1727940 RMD160 a4b71a246449f88a59acda6ecf019f66b9b7c19b SHA1 e5dcaa25525ca63663c3d4e7027897fed54a4f95 SHA256 8480a7c1b9ac0fddff55e8daae807ccf0a47aa292137fa8c9f97cf0733b459c7
 DIST busybox-1.8.2.tar.bz2 1765399 RMD160 561d84cc28d2b9cd85f05d9959bc2c585c80a986 SHA1 cca3259c06c64ad4ba08070c8da32083d813057f SHA256 1e444c15c064ca111299323a5193113c8bcb80f7a946675b70f14b0166a2a59c
@@ -31,12 +31,12 @@ EBUILD busybox-1.7.4.ebuild 7065 RMD160 c15b1f193f6e6064b129ab0d3988b5a7661c484e
 EBUILD busybox-1.8.2.ebuild 7100 RMD160 f990e7adf92b71ed119e4954fc5d533e68821a91 SHA1 ece3e8c06f597ff1c86066e6a4330a03772577a2 SHA256 41e4a1a77b5cd0e990162043d0ef2389f5d825a5a7e92596d531469d885a2b1f
 EBUILD busybox-1.9.0.ebuild 7101 RMD160 228234953d5a8a6bb0580828ac53d724e1a9c784 SHA1 befa00b876bb64fde773e2420dad608de9437344 SHA256 0d954b94a2b01e84b6d71b15e41f9ce239995908b873e57e2ab9a1bd706c5a6d
 EBUILD busybox-1.9.2.ebuild 7063 RMD160 738b8532ae768be8605b6fb3e1044f680568416e SHA1 add0013f17528f2137bde9258c9654edcc7d6a55 SHA256 c1f0002bda1126037dc3b06873e7e7606cee7b49f17199902f56e90b19862291
-MISC ChangeLog 27144 RMD160 8215441fd15176d85eb7c6bb95679a6d58d828fb SHA1 6a5ae0836ba34c4ca333f46ce25cc32062197d6c SHA256 a36835836fa1130e7c316b9f9dca53f26e28db0c763dbdbac177775a80e6c327
+MISC ChangeLog 27294 RMD160 c541f5af1370db43f16c297b9b48848c6de2978b SHA1 e6370c051c9fb4444e5c89d34d73f2afbbf6e335 SHA256 84e86dc0c418774ae50f77829a3f8395842ec63b3698ba344ac26befd2943d19
 MISC metadata.xml 161 RMD160 77385273ea1d12ed4093a4167307486b74d1cf82 SHA1 aa4b2873e32de89c0b0aeb26b5782f77cb00948e SHA256 a11fdd02015a232398fdf22a20d26a95fc34d44c54513e6b26b6128d0b76122e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFICnLDj9hvisErhMIRAk6hAKDeL9AsL3NP/OMV5xOj26TXZiOYgwCfYsti
-+WuMcmX90bHHMGswh9kKJjo=
-=9x2K
+iD8DBQFICpnCj9hvisErhMIRAh1kAKCTSyRPXJqUdAnf+/wyjBB/HLUYZgCfUXaD
+sgOPdkCIAz+CSSsEFQnF9gY=
+=60in
 -----END PGP SIGNATURE-----
